--- a/index.html
+++ b/index.html
@@ -124,6 +124,27 @@
       </div>
     </section>
 
+    <!-- ----------------- SECTION 2 ---------------- -->
+    <section class="section" id="section--2">
+      <div class="section__title">
+        <h2 class="section__description">Operations</h2>
+        <h3 class="section__header">
+          Everything as simple as possible, but no simpler.
+        </h3>
+      </div>
+    </section>
+
+    <!-- ---------------------- SECTION 3 ------------------- -->
+
+    <section class="section" id="section--3">
+      <div class="section__title section__title--testimonials">
+        <h2 class="section__description">Not sure yet?</h2>
+        <h3 class="section__header">
+          Millions of Bankists are already making their lifes simpler.
+        </h3>
+      </div>
+    </section>
+
     <script src="script.js"></script>
   </body>
 </html>
